@@ -1,3 +1,7 @@
+2002-05-01  Andy Piper <andy.piper@freeuk.com>
+
+	* POTFILES.in: added new files and removed obsolete ones
+
 2002-05-02  gettextize  <bug-gnu-utils@gnu.org>
 
 	* Makefile.in.in: Upgrade to gettext-0.10.38.
